# mmcontext

./: .cruft.json  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  MIGRATION_PLAN.md  README.md  REFACTOR_ROADMAP.md  ROADMAP.md  eval_main.py  pp_main.py  pyproject.toml  train.py  train_main.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  claude-implement.yaml  claude-review.yaml  codeql.yaml  dependabot-auto-merge.yaml  release.yaml  test.yaml
conf/: collect_metrics_conf.yaml  combined_conf.yaml  combined_conf_ssh.yaml  dataset_list.yaml  embed_conf.yaml  embed_serial_conf.yaml  eval_conf.yaml  logging_config.json  model_list.yaml  train_conf.yaml
conf/datasets/: dataset_list.yaml
conf/eval/: collect_metrics_conf.yaml  embed_eval_conf.yaml  scsa_conf.yaml
conf/eval/datasets/: dataset_list.yaml  dataset_list_1.yaml  dataset_list_2.yaml  dataset_list_scsa.yaml
conf/eval/models/: model_list_all_with_baselines.yaml  model_list_cxg_geo_3.yaml  model_list_cxg_geo_6.yaml
conf/models/: model_list.yaml  model_list_cellwhisp_2411.yaml  model_list_cxg_geo_1.yaml  model_list_cxg_geo_2.yaml  model_list_cxg_geo_3.yaml  model_list_cxg_geo_4.yaml  model_list_cxg_geo_5.yaml  model_list_cxg_geo_6.yaml  model_list_cxg_geo_all.yaml  model_list_omics_enc_dim2048_1.yaml  model_list_omics_enc_dim2048_2.yaml  model_list_omics_enc_dim2048_3.yaml  model_list_omics_enc_dim2048_4.yaml  model_list_omics_enc_dim2048_5.yaml  model_list_text_plain.yaml
conf/training/: basebert_numeric.yaml  basebert_text.yaml  basebert_text_semantic.yaml  biobert_numeric.yaml  example_conf.yaml  mmcontext_v2.yaml  mmcontext_v2_tune.yaml  multi_example.yaml  train_conf.yaml
configs/: config.yaml  pp_config.yaml  train_config.yaml
configs/engine/: default.yaml
configs/engine/losses/: default.yaml
configs/pp/: default.yaml
configs/train_config/: first_config.yaml
data/emb_dicts/: test_dict.pkl
data/test_data/: new_test_adata.h5ad  test_adata.h5ad  test_adata_with_embeddings.h5ad
docs/: agentic_workflow_research.md  api.md  conf.py  contributing.md  index.md  references.bib
docs/_autosummary/: mmcontext.pp.Embedder.rst
docs/_build/doctrees/: api.doctree  changelog.doctree  contributing.doctree  environment.pickle  index.doctree  references.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api.html  changelog.html  contributing.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
docs/api/: engine.md  eval.md  index.md  models.md  preprocessing.md
docs/notebooks/: context_based.ipynb  data_based.ipynb  example.ipynb  explore_scvi.ipynb  mmcontext.ipynb  mmcontext_train.ipynb
exploratory/notebooks/: MMContextEncoder_quickstart.ipynb  MMContextEncoder_training_demo.ipynb  MMContextEncoder_training_realdata.ipynb  Training_sanity_check.ipynb  celltype_emb.ipynb  check_dataset_batch.ipynb  clustering_issues.ipynb  eval_model.ipynb  evaluate_model.ipynb  evaluate_model_from_adata.ipynb  geneformer.ipynb  geneformer_og.ipynb  geneformer_tdc.ipynb  get_adata_from_census.ipynb  get_data_with_info.ipynb  intial_embeddings.ipynb  load_and_push_model.ipynb  mine_hard_negatives.ipynb  mmcontext.ipynb  mmcontext_concept_figs.ipynb  mmcontext_inference.ipynb  mmcontext_train.ipynb  mmcontext_train_old.ipynb  omics_sentence_transformer_loss_demo.ipynb  omics_sentence_transformer_loss_report.ipynb  original_cell_type_emb.ipynb  plot_eval_results.ipynb  scib_data.ipynb  test_dataset_load.ipynb  text_batches.ipynb  text_only_concept_figs.ipynb
modules/: prepare_cellwhisperer.sh  prepare_scsa.sh  requirements_calmate.txt  requirements_cellwhisperer.txt  requirements_scsa.txt
modules/.calmate/: mappings.csv
scripts/: collect_metrics.py  combined_pipeline.py  delete_models.py  embed.py  embed_eval.py  embed_serial.py  eval.py  evaluation_workflow.py  explore_hard_negatives.py  finetune_tiny.py  funky_heatmap_clean.py  funky_heatmap_from_results.py  plot_metrics.py  run_cellwhisperer_standalone.py  run_collect_metrics.slurm  run_combined_cpu.slurm  run_combined_gpu.slurm  run_embed.slurm  run_embed_cpu.slurm  run_embed_eval_cpu.slurm  run_embed_eval_gpu.slurm  run_eval.slurm  run_scsa.py  run_scsa.slurm  run_training.slurm  run_training_merged.slurm  start_job.slurm  start_remote_jupter.sh  train.py  train_config.py  train_hydra.py  train_merged.py  train_mmcontext.py  train_tiny.py  upload_checkpoint.py
scripts/test_scripts/: make_test_adata.py  make_test_category_embeddings.py
scripts/util/: privatize_models.py  upload_checkpoint.py  zip_and_transfer.slurm
src/mmcontext/: __init__.py  callback.py  file_utils.py  flow.py  get_paper_info.py  hub_utils.py  infer.py  mmcontextencoder.py  onehot.py  sanity_helpers.py  simulator.py  training.py  utils.py
src/mmcontext/_legacy/: __init__.py  adapters.py  mmcontextencoder.py  omicsencoder.py
src/mmcontext/conf/: logging_config.json  main_default.yaml
src/mmcontext/data/: download_and_split_data.py  simulate_data.py
src/mmcontext/eval/: ari.py  (+17 more)
templates/: usage_tutorial.ipynb
tests/: conftest.py  test_adapter_callback.py  test_adapter_module.py  test_anndata_sentence_transformer_dataset.py  test_basic.py  test_context_embedder.py  test_data_properties.py  test_dataset_constructor.py  test_dataset_prep.py  test_dim_aligner.py  test_embed_preallocation.py  test_embedder.py  test_embedding_normalizer.py  test_evaluator.py  test_gradients.py  test_losses.py  test_miniOmicsEncoder.py  test_mmcontext_encoder.py  test_mmcontext_module.py  test_mmcontext_tokenizer.py  test_omics_attention_module.py  test_pre_trained.py  test_prepare_store.py  test_query_annotate.py  test_register_initial_embeddings.py  test_sentence_transformer_integration.py  test_st_integration.py  test_trainer.py  test_training.py
tests/test_io/: conftest.py  test_lean_loaders.py  test_vector_store.py  test_zarr_read.py
tutorials/: evaluate_model.ipynb  evaluate_model_2.0.ipynb  pretrained_inference.ipynb  train_new.ipynb
(+94 files in other folders)
