[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=64" ]

[project]
name = "mmcontext"
version = "2.0.0"
description = "Multimodal contrastive learning aligning text and omics embeddings via sentence-transformers."
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Jonatan Menger", email = "jonatan.menger@gmail.com" },
]
authors = [
  { name = "Jonatan Menger" },
]
requires-python = ">=3.11,<3.14"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "accelerate>=1.9",
  "anndata>=0.11.3",
  "datasets>=2.19.1,!=4",
  "huggingface-hub>=0.34.3",
  "numpy>=1.24",
  "python-dotenv>=1.1.1",
  "scanpy>=1.11.3",
  "sentence-transformers>=5.4",
  "torch>=2.5",
  "transformers>=4.57.1",
  "zarr<3",
]
optional-dependencies.eval = [
  "scib>=1.1.7",
  "umap-learn>=0.5",
]
optional-dependencies.train = [
  "wandb>=0.27",
]
optional-dependencies.dev = [
  "pre-commit",
  "ruff",
  "twine",
  "build",
]
optional-dependencies.test = [
  "coverage",
  "pytest",
  "python-json-logger",
]
urls.Homepage = "https://github.com/mengerj/mmcontext"
urls.Source = "https://github.com/mengerj/mmcontext"
urls.Issues = "https://github.com/mengerj/mmcontext/issues"

[tool.setuptools]
packages.find.where = [ "src" ]
packages.find.include = [ "mmcontext*" ]
include-package-data = true
package-data = {}


# "mmcontext.conf" = [ "*.json" ]
[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]
format.docstring-code-format = true
lint.select = [
  "B",      # flake8-bugbear
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008",   # function calls in argument defaults
  "BLE001", # allow blind expections
  "D100",   # Missing docstring in public module
  "D104",   # Missing docstring in public package
  "D105",   # allow missing docstrings for __magic__ methods
  "D107",   # Missing docstring in __init__
  "D203",   # We don't want a blank line before a class docstring
  "D213",   # We want docstrings to start immediately after triple quote
  "D400",   # first line should end with a period
  "D401",   # first line should be in imperative mood
  "E501",   # line too long
  "E731",   # lambdas are allowed
  "E741",   # allow I, O, l as variable names
  "F401",   # dont remove unused imports, because of fiass flag
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.flake8]
ignore = [
  "C408",  # ignore "Rewrite as literal" from flake8-comprehensions
  "UP031",
]

[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = [
  "--import-mode=importlib",
]
ini_options.xfail_strict = true

[tool.coverage]
run.omit = [
  "**/test_*.py",
]
run.source = [ "mmcontext" ]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
]
